--- a/public/home.css
+++ b/public/home.css
@@ -168,7 +168,7 @@ body {
     position: absolute;
     transform: translate(0%, -50%);
     top: 50%;
-    right: 225px;
+    right: 215px;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -192,26 +192,142 @@ body {
 #tp-up > span {
     vertical-align: middle;
     color: lightgray;
-    font-size: 18px;
+    font-size: 17px;
 }
 
 #tp-admin {
     position: absolute;
     transform: translate(0%, -50%);
     top: 50%;
-    right: 100px;
+    right: 90px;
     color: lightgray;
     cursor: pointer;
     display: grid;
     align-items: center;
     border-radius: 5px / 5px;
     height: 40px;
-    width: 115px;
+    width: 120px;
     text-align: center;
     transition: .25s;
     justify-content: center;
+    font-size: 17px;
 }
 
 #tp-admin:hover {
     background-color: #505357;
+}
+
+#tp-user {
+    position: absolute;
+    top: 50%;
+    right: 30px;
+    transform: translate(0%, -50%);
+    height: 40px;
+    border-radius: 100%;
+    cursor: pointer;
+    background-color: lightblue;
+    width: 40px;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    font-family: "Roboto", sans-serif;
+}
+
+#tp-settings {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    transform: translate(0%, -50%);
+    top: 50%;
+    right: 335px;
+    cursor: pointer;
+    fill: lightgray; 
+}
+
+#tp-logo {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+#user-pop {
+    background-color: #36383b;
+    position: fixed;
+    z-index: 2;
+    top: 65px;
+    right: 20px;
+    height: 270px;
+    width: 280px;
+    border-radius: 15px / 15px;
+    box-shadow: 6.5px 12.0px 12.0px hsl(0deg 0% 0% / 0.30);
+}
+
+#up-avatar {
+    background-color: lightblue;
+    height: 60px;
+    width: 60px;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    font-family: "Roboto", sans-serif;
+    border-radius: 100%;
+    font-size: 20px;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 22%;
+    left: 50%;
+    cursor: default;
+    user-select: none;
+}
+
+#up-name {
+    position: absolute;
+    top: calc(20% + 60px);
+    left: 50%;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    transform: translate(-50%, -50%);
+    font-size: 18px;
+    color: lightblue;
+}
+
+#up-uname {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: calc(20% + 60px + 10px + 12px);
+    color: lightgray;
+    left: 50%;
+    text-align: center;
+    font-size: 16px;
+}
+
+#up-acs, #up-lg {
+    width: 70%;
+    height: 30px;
+    background-color: #505357;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: calc(20% + 60px + 10px + 22px + 35px);
+    left: 50%;
+    text-align: center;
+    border-radius: 10px / 10px;
+    cursor: pointer;
+    user-select: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: lightgray;
+}
+
+#up-lg {
+    top: calc(20% + 60px + 10px + 22px + 35px + 40px);
+}
+
+#up-acs > svg, #up-lg > svg {
+    height: 18px;
+    width: 18px;
+    fill: rgb(168, 166, 166);
+    margin-right: 10px;
 }
