--- a/public/home.css
+++ b/public/home.css
@@ -16,7 +16,7 @@ body {
     width: calc(100% - 220px);
     height: calc(100% - 70px);
     top: 70px;
-    padding-left: 15px;
+    padding-left: 25px;
     padding-top: 20px;
     box-sizing: border-box;
 }
@@ -478,7 +478,62 @@ body {
 }
 
 .df-photo-thumb {
-    height: 200px;
     margin-right: 5px;
     cursor: pointer;
+    position: relative;
+    width: fit-content;
+    display: inline-block;
+    transition: .2s;
+}
+
+.df-photo-thumb > img {
+    height: 225px;
+}
+
+
+.df-photo-thumb > svg {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    height: 15px;
+    width: 15px;
+    z-index: 2;
+    background-color: lightgray;
+    border-radius: 100%;
+    padding: 5px;
+    transition: .2s;
+    opacity: 0;
+}
+
+.df-photo-thumb > svg:hover {
+    background-color: white;
+}
+
+.dc-date-container {
+    float: none;
+}
+
+.dc-title {
+    color: lightgray;
+}
+
+.df-photo-thumb:hover > svg {
+    opacity: 1;
+}
+
+.df-photo-thumb:hover::before {
+    opacity: 1;
+}
+
+.df-photo-thumb::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 45px;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), transparent);
+    opacity: 0;
+    transition: opacity .2s;
+    z-index: 1; 
 }
