--- a/public/home.css
+++ b/public/home.css
@@ -484,6 +484,7 @@ body {
     width: fit-content;
     display: inline-block;
     transition: .2s;
+    user-select: none;
 }
 
 .df-photo-thumb > img {
@@ -536,4 +537,10 @@ body {
     opacity: 0;
     transition: opacity .2s;
     z-index: 1; 
+}
+
+.df-photo-thumb > svg.selected {
+    background-color: rgb(0, 137, 250);
+    fill: white;
+    opacity: 1 !important;
 }
