--- a/public/home.css
+++ b/public/home.css
@@ -552,3 +552,41 @@ body {
     fill: white;
     opacity: 1 !important;
 }
+
+#selecting-bar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 71px;
+    z-index: 9;
+    background-color: var(--back);
+    box-shadow: 6.5px 12.0px 12.0px hsl(0deg 0% 0% / 0.30);
+    display: none;
+    align-items: center;
+    padding-left: 25px;
+    box-sizing: border-box;
+}
+
+#sb-close {
+    height: 20px;
+    width: 20px;
+    fill: lightgray;
+    cursor: pointer;
+    border-radius: 100%;
+    transition: .2s;
+    padding: 10px;
+    vertical-align: middle;
+}
+
+#sb-close:hover {
+    background-color: gray;
+}
+
+#sb-amount {
+    margin-left: 15px;
+    font-size: 22px;
+    color: lightgray;
+    vertical-align: middle;
+    margin-top: 2px;
+}
