--- a/public/home.css
+++ b/public/home.css
@@ -19,6 +19,8 @@ body {
     padding-left: 25px;
     padding-top: 20px;
     box-sizing: border-box;
+    overflow-y: scroll;
+    padding-bottom: 15px;
 }
 
 #top-bar {
@@ -589,4 +591,67 @@ body {
     color: lightgray;
     vertical-align: middle;
     margin-top: 2px;
+}
+
+#sb-delete, #sb-favorite, #sb-lock {
+    height: 25px;
+    width: 25px;
+    fill: var(--select);
+    cursor: pointer;
+}
+
+#sb-delete {
+    position: absolute;
+    right: 25px;
+    top: 50%;
+    transform: translate(0%, -50%);
+}
+
+#sb-favorite {
+    position: absolute;
+    right: calc(25px + 25px + 15px);
+    top: 50%;
+    transform: translate(0%, -50%);
+}
+
+#sb-lock {
+    position: absolute;
+    right: calc(25px + 25px + 25px + 15px + 15px);
+    top: 50%;
+    transform: translate(0%, -50%);
+}
+
+#photo-view {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 90;
+    background-color: var(--back);
+}
+
+#pv-im {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: calc(100% - 300px);
+    height: 100%;
+}
+
+#pv-img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    height: 100%;
+}
+
+#pv-info {
+    position: absolute;
+    width: 300px;
+    right: 0;
+    top: 0;
+    height: 100%;
+    border-left: 1px solid gray;
 }
