--- a/public/home.css
+++ b/public/home.css
@@ -635,8 +635,9 @@ body {
     position: absolute;
     left: 0;
     top: 0;
-    width: calc(100% - 300px);
+    width: 100%;
     height: 100%;
+    background-color: black;
 }
 
 #pv-img {
@@ -644,7 +645,8 @@ body {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    height: 100%;
+    max-height: 100%;
+    user-select: none;
 }
 
 #pv-info {
@@ -653,5 +655,58 @@ body {
     right: 0;
     top: 0;
     height: 100%;
-    border-left: 1px solid gray;
+    padding-left: 25px;
+    box-sizing: border-box;
+    padding-top: 10px;
+    display: none;
+}
+
+#pv-info > h1 {
+    color: lightgray;
+    font-weight: normal;
+}
+
+#pvi-desc {
+    width: calc(100% - 25px);
+    background-color: transparent;
+    border: none;
+    font-family: "Product Sans", sans-serif;
+    border-bottom: 1.5px solid lightgray;
+    color: lightgray;
+    height: 30px;
+    outline: 0;
+    font-size: 14px;
+}
+
+#pvi-desc:focus {
+    border-bottom: 1px solid var(--select);
+}
+
+#pv-controls {
+    z-index: 10;
+    position: absolute;
+    top: 15px;
+    right: 20px;
+    display: flex;
+    align-items: center;
+}
+
+#pv-controls > svg {
+    height: 20px;
+    width: 20px;
+    fill: lightgray;
+    margin-left: 30px;
+    cursor: pointer;
+}
+
+#pcv-info {
+    border-radius: 100%; 
+    border: 2px solid lightgray; 
+    padding: 4px; 
+    height: 12px !important; 
+    width: 12px !important;
+}
+
+#pcv-zo {
+    display: none;
 }
