--- a/public/home.css
+++ b/public/home.css
@@ -638,6 +638,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: black;
+    transition: .3s;
 }
 
 #pv-img {
@@ -652,13 +653,13 @@ body {
 #pv-info {
     position: absolute;
     width: 300px;
-    right: 0;
+    right: -300px;
     top: 0;
     height: 100%;
     padding-left: 25px;
     box-sizing: border-box;
     padding-top: 10px;
-    display: none;
+    transition: right .3s;
 }
 
 #pv-info > h1 {
