--- a/public/home.css
+++ b/public/home.css
@@ -729,16 +729,16 @@ body {
 .pvi-detail {
     height: 70px;
     width: calc(100% + 25px);
-    cursor: pointer;
     margin-left: -25px;
     padding-left: 25px;
     box-sizing: border-box;
     padding-top: 13px;
+    margin-bottom: 12px;
 }
 
-.pvi-detail:hover {
+/*.pvi-detail:hover {
     background-color: #2f2f30;
-}
+}*/
 
 .pvi-detail > svg {
     height: 24px;
